delete button + menu z-index bugfix

--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ baritem:hover {
 	margin: auto auto;
 	backdrop-filter: blur(5px);
 	-webkit-backdrop-filter: blur(5px);
+	z-index: 50;
 }
 
 hin {
